# artificial-senses

./: LICENSE.txt  README.md  pyproject.toml
src/artificial_senses/: __init__.py  __version__.py  app.py  camera.py  processor.py  segmentation.py
